--- a/CSS/css/selectorsexample.css
+++ b/CSS/css/selectorsexample.css
@@ -1,5 +1,5 @@
 *{
-	background-color: grey;
+	background-color: white;
 }
 
 div[role="main"]{
@@ -9,4 +9,17 @@ div[role="main"]{
 /*select all the elements that are second child of their parents */
 li:nth-child(2){
 	background-color: red;
+}
+
+li:nth-child(2){
+	background-color: red;
+}
+/* exercise */
+
+a:nth-child(2n+1) {
+	background-color: green;
+}
+
+a:nth-child(2n) {
+	background-color: blue;
 }
