make form page http://validator.w3.org validated using CSS

--- a/CSS Assignments/css/cform.css
+++ b/CSS Assignments/css/cform.css
@@ -5,6 +5,20 @@ body
 	
 }
 
+.center {
+    margin: auto;
+    width: 70%;
+    background-color: SlateBlue;
+}
+
+img 
+{
+	
+	margin: auto;
+    width: 100%;
+	
+}
+
 h3
 {
 	font-family: Calibri; 
@@ -36,6 +50,11 @@ table
 	background-color: SlateBlue; 
 	border-collapse: collapse; 
 	border: 2px solid navy;
+	 
+}
+
+td {
+    padding: 10px;
 }
 
 table.inner
