--- a/CSS Assignments/css/cform.css
+++ b/CSS Assignments/css/cform.css
@@ -5,10 +5,30 @@ body
 	
 }
 
+.center2 {
+    width:70%; 
+    margin-left:15%; 
+    margin-right:15%;
+
+  }
+
 .center {
-    margin: auto;
-    width: 70%;
-    background-color: SlateBlue;
+    width:80%; 
+    margin-left:10%; 
+    margin-right:15%;
+    background-color: #b0e0e6
+}
+
+.center1 {
+    float: center;
+    width: 500px;
+    background-color: #3E4946;
+}
+
+td#td1 {
+    
+    text-align:'center';
+
 }
 
 img 
@@ -42,6 +62,7 @@ h2
 }
 table
 {
+
 	font-family: Calibri; 
 	color:white; 
 	font-size: 11pt; 
@@ -55,7 +76,11 @@ table
 
 td {
     padding: 10px;
+
 }
+
+
+
 
 table.inner
 {
