[attribute|=value] Selector

--- a/All Assignments/CSS Assignments/css/cform.css
+++ b/All Assignments/CSS Assignments/css/cform.css
@@ -31,7 +31,11 @@ a[href~="/html/"]
 }
 
 [class*="te"] {
-    background: blue;
+    background: ;
+}
+
+[class|=top] {
+    background: green;
 }
 
 body 
