E:only-of-type selector

--- a/All Assignments/CSS Assignments/css/cform.css
+++ b/All Assignments/CSS Assignments/css/cform.css
@@ -85,7 +85,12 @@ tr > td:last-of-type
 
 p:only-child
 {
-background:#EA08D0;
+color:#EA08D0;
+} 
+
+p:only-of-type
+{
+color:#EA0863;
 } 
 
 body 
