--- a/All Assignments/CSS Assignments/css/cform.css
+++ b/All Assignments/CSS Assignments/css/cform.css
@@ -120,6 +120,12 @@ input:focus
 background-color:yellow;
 }
 
+:target
+{
+border: 2px solid #D4D4D4;
+background-color: #e5eecc;
+}
+
 body 
 {
 	
