E:enabled E:disabled selector

--- a/All Assignments/CSS Assignments/css/cform.css
+++ b/All Assignments/CSS Assignments/css/cform.css
@@ -131,6 +131,14 @@ p:lang(it)
 background:yellow;
 }
 
+input[type=text]:enabled {
+    background: #ffff00;
+}
+
+input[type=text]:disabled {
+    background: #dddddd;
+}
+
 body 
 {
 	
